--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,12 +150,15 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite
 
 [RootWindow]
 ScreenPosition=X=571.000 Y=149.000
@@ -1037,21 +1040,25 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem3=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
-MRUItem4=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
-MRUItem5=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem6=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem7=/Game/2DSideScroller/Animations/PC_Run
-MRUItem8=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem9=/Game/2DSideScroller/Animations/PC_JumpUp
-MRUItem10=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem11=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem12=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete_Sprite_22
-MRUItem13=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete
-MRUItem14=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet
+MRUItem0=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem1=/Game/2DSideScroller/Textures/2DBackground
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem4=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem5=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem6=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem7=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
+MRUItem8=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
+MRUItem9=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem10=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem11=/Game/2DSideScroller/Animations/PC_Run
+MRUItem12=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem13=/Game/2DSideScroller/Animations/PC_JumpUp
+MRUItem14=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem15=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem16=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete_Sprite_22
+MRUItem17=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete
+MRUItem18=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1570,6 +1577,52 @@ ParticleSystemComponent.Navigation=True
 ParticleSystemComponent.Tags=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+PaperTileMapComponent.TransformCommon=True
+PaperTileMapComponent.Warning=True
+PaperTileMapComponent.Tile Map=True
+PaperTileMapComponent.Materials=True
+PaperTileMapComponent.Physics=True
+PaperTileMapComponent.Collision=True
+PaperTileMapComponent.Lighting=True
+PaperTileMapComponent.Rendering=True
+PaperTileMapComponent.Navigation=True
+PaperTileMapComponent.VirtualTexture=True
+PaperTileMapComponent.Tags=True
+PaperTileMapComponent.Activation=True
+PaperTileMapComponent.Cooking=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1583,6 +1636,9 @@ ParticleSystemComponent.Cooking=True
 /Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet.Level1_4_Adkins_BuildingTileSet=0
 /Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap=1
 /Game/StarterContent/Particles/Materials/M_Dust_Particle.M_Dust_Particle=0
+/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D=0
+/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=0
+/Game/2DSideScroller/Textures/2DBackground.2DBackground=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1640,11 +1696,14 @@ NodeTemplateCacheCapMB=20.000000
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
-RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap;
 
