--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=18.000 Y=157.000
@@ -1027,6 +1027,8 @@ MovieSceneCapture.TimeStamp=2021.08.31-15.04.46
 MovieSceneCapture.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.08.31-15.04.49
 TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.08.31-15.04.40
+BlueprintGraph.LastCompileMethod=Unknown
 
 [DetailCategories]
 2DSideScrollerCharacter_C.TransformCommon=True
@@ -1096,26 +1098,44 @@ PaperExtractSpritesSettings.Settings=True
 PaperExtractSpritesSettings.Naming=True
 PaperExtractSpriteGridSettings.Grid=True
 PaperFlipbook.Sprite=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Default=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/animationn/PC_Shoot
-MRUItem1=/Game/2DSideScroller/animationn/PC_Run
-MRUItem2=/Game/2DSideScroller/animationn/PC_Projectile
-MRUItem3=/Game/2DSideScroller/animationn/PC_JumpShoot
-MRUItem4=/Game/2DSideScroller/animationn/PC_JumpUp
-MRUItem5=/Game/2DSideScroller/animationn/PC_JumpDown
-MRUItem6=/Game/2DSideScroller/animationn/PC_idle
-MRUItem7=/Game/2DSideScroller/animationn/PC_Hurt
-MRUItem8=/Game/2DSideScroller/Sprites/PC_Run
-MRUItem9=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
-MRUItem10=/Game/2DSideScroller/Sprites/PC_Hurt
-MRUItem11=/Game/2DSideScroller/Sprites/Hurt
-MRUItem12=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
-MRUItem13=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
-MRUItem14=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/animationn/PC_Shoot
+MRUItem2=/Game/2DSideScroller/animationn/PC_Run
+MRUItem3=/Game/2DSideScroller/animationn/PC_Projectile
+MRUItem4=/Game/2DSideScroller/animationn/PC_JumpShoot
+MRUItem5=/Game/2DSideScroller/animationn/PC_JumpUp
+MRUItem6=/Game/2DSideScroller/animationn/PC_JumpDown
+MRUItem7=/Game/2DSideScroller/animationn/PC_idle
+MRUItem8=/Game/2DSideScroller/animationn/PC_Hurt
+MRUItem9=/Game/2DSideScroller/Sprites/PC_Run
+MRUItem10=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
+MRUItem11=/Game/2DSideScroller/Sprites/PC_Hurt
+MRUItem12=/Game/2DSideScroller/Sprites/Hurt
+MRUItem13=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
+MRUItem14=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
+MRUItem15=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/animationn/PC_Hurt.PC_Hurt=1
@@ -1127,8 +1147,45 @@ MRUItem14=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
 /Game/2DSideScroller/animationn/PC_Projectile.PC_Projectile=1
 /Game/2DSideScroller/animationn/PC_Run.PC_Run=1
 /Game/2DSideScroller/animationn/PC_Shoot.PC_Shoot=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
 Object=
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
