changed map. collision, and jump height

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -156,9 +156,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
 
 [RootWindow]
 ScreenPosition=X=559.000 Y=87.000
@@ -1040,25 +1040,26 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem2=/Game/2DSideScroller/Textures/2DBackground
-MRUItem3=/Game/2DSideScroller/Textures/SandyBackround
-MRUItem4=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem0=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem1=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem2=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem3=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem4=/Game/2DSideScroller/Animations/P_Ambient_Dust
 MRUItem5=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem6=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem7=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
-MRUItem8=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
-MRUItem9=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem10=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem11=/Game/2DSideScroller/Animations/PC_Run
-MRUItem12=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem13=/Game/2DSideScroller/Animations/PC_JumpUp
-MRUItem14=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem15=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem16=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete_Sprite_22
-MRUItem17=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete
-MRUItem18=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem7=/Game/2DSideScroller/Textures/2DBackground
+MRUItem8=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem9=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem10=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem11=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
+MRUItem12=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
+MRUItem13=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem14=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem15=/Game/2DSideScroller/Animations/PC_Run
+MRUItem16=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem17=/Game/2DSideScroller/Animations/PC_JumpUp
+MRUItem18=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem19=/Game/2DSideScroller/Animations/PC_Hurt
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1071,7 +1072,7 @@ PaperExtractSpritesSettings.Settings=True
 PaperExtractSpritesSettings.Naming=True
 PaperExtractSpriteGridSettings.Grid=True
 PaperSprite.Sprite=True
-PaperSprite.Sockets=True
+PaperSprite.Sockets=False
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
 PaperFlipbook.Sprite=True
@@ -1623,6 +1624,21 @@ WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
+2DSideScrollerCharacter_C.MaterialParameters=True
+2DSideScrollerCharacter_C.HLOD=True
+2DSideScrollerCharacter_C.Mobile=True
+2DSideScrollerCharacter_C.AssetUserData=False
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1639,6 +1655,8 @@ WorldSettings.Tick=True
 /Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D=0
 /Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=0
 /Game/2DSideScroller/Textures/2DBackground.2DBackground=1
+/Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust=0
+/Game/StarterContent/Textures/T_Metal_Rust_D.T_Metal_Rust_D=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1650,12 +1668,21 @@ PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTi
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+2DSideScrollerCharacter_C="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+PaperCharacter="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
 GeneralProjectSettings=True
 AnimationSettings=True
 EditorProjectAppearanceSettings=True
+LevelEditor2DSettings=True
+PaperImporterSettings=True
+PaperRuntimeSettings=True
+BlueprintEditorProjectSettings=True
+InputSettings=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1696,13 +1723,12 @@ NodeTemplateCacheCapMB=20.000000
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap;
@@ -1764,4 +1790,41 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[DetailCustomWidgetExpansion]
+2DSideScrollerCharacter_C=
+CapsuleComponent=
+
+[CascadeEditor]
+LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
