--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,7 +70,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
@@ -1036,4 +1036,110 @@ PaperSpriteActor.Cooking=True
 PaperSpriteActor.Replication=True
 PaperSpriteActor.Input=True
 PaperSpriteActor.Actor=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PaperExtractSpriteGridSettings.Grid=True
+2DSideScrollerCharacter_C.TransformCommon=True
+2DSideScrollerCharacter_C.Sprite=True
+2DSideScrollerCharacter_C.Camera=True
+2DSideScrollerCharacter_C.Physics=True
+2DSideScrollerCharacter_C.Collision=True
+2DSideScrollerCharacter_C.Lighting=True
+2DSideScrollerCharacter_C.Rendering=True
+2DSideScrollerCharacter_C.Navigation=True
+2DSideScrollerCharacter_C.VirtualTexture=True
+2DSideScrollerCharacter_C.Tags=True
+2DSideScrollerCharacter_C.Activation=True
+2DSideScrollerCharacter_C.Cooking=True
+2DSideScrollerCharacter_C.Character=True
+2DSideScrollerCharacter_C.Character Movement (General Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Walking=True
+2DSideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+2DSideScrollerCharacter_C.Character Movement (Networking)=True
+2DSideScrollerCharacter_C.Character Movement: Swimming=True
+2DSideScrollerCharacter_C.Character Movement: Flying=True
+2DSideScrollerCharacter_C.Character Movement: Custom Movement=True
+2DSideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Physics Interaction=True
+2DSideScrollerCharacter_C.Character Movement=True
+2DSideScrollerCharacter_C.Character Movement: Avoidance=True
+2DSideScrollerCharacter_C.RootMotion=True
+2DSideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+2DSideScrollerCharacter_C.NavMovement=True
+2DSideScrollerCharacter_C.Velocity=True
+2DSideScrollerCharacter_C.PlanarMovement=True
+2DSideScrollerCharacter_C.MovementComponent=True
+2DSideScrollerCharacter_C.Shape=True
+2DSideScrollerCharacter_C.Pawn=True
+2DSideScrollerCharacter_C.Replication=True
+2DSideScrollerCharacter_C.Input=True
+2DSideScrollerCharacter_C.Actor=True
+2DSideScrollerCharacter_C.Materials=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Navigation=True
+PaperSpriteComponent.VirtualTexture=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperFlipbook.Sprite=True
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[ContentBrowserRecent]
+MRUItem0=/Game/2DSideScroller/animations/PC_shoot
+MRUItem1=/Game/2DSideScroller/animations/PC_run
+MRUItem2=/Game/2DSideScroller/animations/PC_projectile
+MRUItem3=/Game/2DSideScroller/animations/PC_jump
+MRUItem4=/Game/2DSideScroller/animations/PC_hurt
+MRUItem5=/Game/2DSideScroller/animations/PC_idle
+MRUItem6=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
+MRUItem7=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
+MRUItem8=/Game/2DSideScroller/Sprites/4_Ramsey_CharacterComplete
+MRUItem9=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
+MRUItem10=/Game/2DSideScrollerBP/4_Ramsey_CharacterComplete
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[AssetEditorToolkitTabLocation]
+/Game/2DSideScroller/animations/PC_hurt.PC_hurt=1
+/Game/2DSideScroller/animations/PC_idle.PC_idle=1
+/Game/2DSideScroller/animations/PC_jump.PC_jump=1
+/Game/2DSideScroller/animations/PC_projectile.PC_projectile=1
+/Game/2DSideScroller/animations/PC_run.PC_run=1
+/Game/2DSideScroller/animations/PC_shoot.PC_shoot=1
+
+[DetailPropertyExpansion]
+PaperFlipbook="\"Object.Sprite.KeyFrames\" "
+Object=
 
