--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -1211,26 +1211,35 @@ PaperTileMapActor.Cooking=True
 PaperTileMapActor.Replication=True
 PaperTileMapActor.Input=True
 PaperTileMapActor.Actor=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Events=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/4_drones_tilemap
-MRUItem1=/Game/2DSideScroller/Sprites/4_drones_tileset_TileSet
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem3=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem4=/Game/2DSideScroller/Animations/PC_Run
-MRUItem5=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem6=/Game/2DSideScroller/Animations/PC_JumpShoot
-MRUItem7=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem8=/Game/2DSideScroller/Animations/PC_Jump
-MRUItem9=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem10=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem11=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
-MRUItem12=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
-MRUItem13=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
-MRUItem14=/Game/2DSideScroller/Textures/4_drones_tileset
+MRUItem0=/Game/2DSideScroller/Textures/Level1_tilesetmap
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScroller/Textures/Level1_tileset
+MRUItem3=/Game/2DSideScroller/Textures/Level1_tileMap
+MRUItem4=/Game/2DSideScroller/Textures/__LastName_TileSet2a__1__TileSet
+MRUItem5=/Game/2DSideScroller/Sprites/4_drones_tilemap
+MRUItem6=/Game/2DSideScroller/Sprites/4_drones_tileset_TileSet
+MRUItem7=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem8=/Game/2DSideScroller/Animations/PC_Run
+MRUItem9=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem10=/Game/2DSideScroller/Animations/PC_JumpShoot
+MRUItem11=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem12=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem13=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem14=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem15=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
+MRUItem16=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
+MRUItem17=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
+MRUItem18=/Game/2DSideScroller/Textures/4_drones_tileset
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0.__Lastname_CharacterComplete__2__Sprite_0=1
@@ -1245,11 +1254,14 @@ MRUItem14=/Game/2DSideScroller/Textures/4_drones_tileset
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 /Game/2DSideScroller/Sprites/4_drones_tileset_TileSet.4_drones_tileset_TileSet=1
 /Game/2DSideScroller/Sprites/4_drones_tilemap.4_drones_tilemap=1
+/Game/2DSideScroller/Textures/Level1_tileset.Level1_tileset=1
+/Game/2DSideScroller/Textures/Level1_tileMap.Level1_tileMap=1
+/Game/2DSideScroller/Textures/Level1_tilesetmap.Level1_tilesetmap=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
 Object=
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0].Vertices.Vertices[3]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0].Vertices.Vertices[3]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0].Vertices.Vertices[3]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0].Vertices.Vertices[4]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0].Vertices.Vertices[4]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1291,5 +1303,6 @@ NodeTemplateCacheCapMB=20.000000
 PreserveScaleRatio=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_tilesetmap.Level1_tilesetmap;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/4_drones_tilemap.4_drones_tilemap;
 
